<resources>
    <string name="app_name">记事本</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">记事本</string>
    <string name="nav_header_subtitle">aueUI的记事本</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="more">更多</string>
    <string name="settings">设置</string>
    <string name="about">关于</string>
    <string name="opensource_license">开源许可</string>
    <string name="source">项目源码</string>
    <string name="day_night_switch">夜间模式</string>
    <string name="new_note">新建记事</string>
    <string name="note_title">标题</string>
    <string name="note_context">写点事吧 φ(゜▽゜*)♪</string>
    <string name="versionName">记事本 v1.2.5</string>
    <string name="ABOUT_US">All User Can Enjoy UI</string>
    <string name="about_info">aueui.icoc.bz </string>
    <string name="about_bq">©2018–2020 aueUI All rights reserved</string>
    <string name="share">分享</string>
    <string name="set_theme_sum">更改记事本的主题风格</string>
    <string name="recycle_bin">回收站</string>
    <string name="cloud_sync">云同步</string>
    <string name="no_note">没有记事</string>

</resources>
