<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_license"
            android:icon="@drawable/message"
            android:title="@string/opensource_license" />
    </group>

    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/setup"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/info"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
