<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="right|top"
    android:baselineAligned="false"
    android:paddingLeft="260dp"
    android:paddingBottom="550dp">

    <androidx.cardview.widget.CardView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:alpha="30"
        app:cardBackgroundColor="#ffffff"
        app:cardCornerRadius="30dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/lin_nightmode"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/main_menu_nightmode"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="0dp"
                        android:layout_weight="1"
                        android:background="@drawable/night"
                        android:gravity="bottom|center" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/day_night_switch"
                        android:textColor="@color/black"
                        android:textSize="8sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linn_recycle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/mian_menu_recycle"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="13dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:background="@drawable/recycle_bin"
                        android:gravity="bottom|center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/recycle_bin"
                        android:textColor="@color/black"
                        android:textSize="8sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/lin_sync"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/main_menu_cloud"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="13dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:background="@drawable/cloud"
                        android:gravity="bottom|center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/cloud_sync"
                        android:textColor="@color/black"
                        android:textSize="8sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lin_settings"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/main_menu_settings"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="13dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:background="@drawable/setting"
                        android:gravity="bottom|center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/settings"
                        android:textColor="@color/black"
                        android:textSize="8sp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>